@@ -1,3 +1,7 @@
+2011-02-02  Stas Boukarev  <stassats@gmail.com>
+
+	* swank.lisp (eval-in-emacs): Export it.
+
 2011-01-28  Stas Boukarev  <stassats@gmail.com>
 
 	* slime.el (slime-check-location-filename-sanity): Guard
